Spero modifica finale

--- a/AOCR_Algoritmo_TabuSearch.ipynb
+++ b/AOCR_Algoritmo_TabuSearch.ipynb
@@ -98,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "oD5u6bFFVvQ8"
       },
@@ -126,18 +126,18 @@
         "    for i in rotta:\n",
         "        # Aggiornamento tempo di viaggio: aggiunge il tempo di percorrenza dall'ultimo nodo visitato\n",
         "        tempo_corrente += t.get((nodo_precedente, i), MAX_COST)\n",
-        "        # Se il costo di viaggio è MAX_COST (arco inesistente o vincolo irrealizzabile), la rotta non è ammissibile.\n",
+        "        # Se il costo di viaggio è MAX_COST (arco inesistente o vincolo irrealizzabile), la rotta non è ammissibile\n",
         "        if tempo_corrente >= MAX_COST: return False\n",
         "\n",
-        "        # Verifica Tempo di Attesa: Nel caso in cui arrivo prima dell'orario di apertura (a[i]), aspetto.\n",
+        "        # Verifica Tempo di Attesa: Nel caso in cui arrivo prima dell'orario di apertura (a[i]), aspetto\n",
         "        if tempo_corrente < a[i]:\n",
         "            tempo_corrente = a[i]\n",
         "\n",
-        "        # Verifica Violazione Finestra Temporale: Se arrivo dopo l'orario di chiusura (b[i]), il vincolo è violato.\n",
+        "        # Verifica Violazione Finestra Temporale: Se arrivo dopo l'orario di chiusura (b[i]), il vincolo è violato\n",
         "        if tempo_corrente > b[i]:\n",
         "            return False\n",
         "\n",
-        "        # Aggiunta del tempo di servizio al tempo corrente.\n",
+        "        # Aggiunta del tempo di servizio al tempo corrente\n",
         "        tempo_corrente += s.get((i, veicolo_id), 0)\n",
         "        nodo_precedente = i # Il nodo corrente diventa il nodo precedente per il prossimo segmento\n",
         "\n",
@@ -145,46 +145,50 @@
         "    if (nodo_precedente, n_plus_1) in t:\n",
         "        # Aggiunge il tempo di viaggio dall'ultimo cliente al deposito 't'\n",
         "        tempo_corrente += t.get((nodo_precedente, n_plus_1), MAX_COST)\n",
-        "        # Verifica che il tempo di arrivo finale sia minore o uguale all'orario di chiusura del deposito.\n",
+        "        # Verifica che il tempo di arrivo finale sia minore o uguale all'orario di chiusura del deposito\n",
         "        if tempo_corrente >= MAX_COST or tempo_corrente > b[n_plus_1]:\n",
         "            return False\n",
         "\n",
-        "    return True # Se tutti i vincoli sono rispettati, la rotta è ammissibile.\n",
+        "    return True # Se tutti i vincoli sono rispettati, la rotta è ammissibile\n",
+        "\n",
+        "\n",
         "\n",
         "# --- FUNZIONI DI LOGICA TABU SEARCH ---\n",
         "\n",
+        "# Calcolo del costo totale di una soluzione\n",
         "def fitness(solution, c, depot_s, depot_t):\n",
-        "    \"\"\"Calcolo del costo totale di una soluzione (costo degli archi).\"\"\"\n",
         "    total_cost = 0\n",
         "    # La 'solution' è un dizionario {veicolo_id: [cliente1, cliente2, ...]}\n",
         "    for veiculo_id, route in solution.items():\n",
         "        if route:\n",
-        "            # 1. Costo del deposito in partenza 's' -> primo cliente della rotta.\n",
+        "            # Si aggiunge il costo dell'arco dal deposito in partenza 's' al primo cliente della rotta\n",
         "            total_cost += c.get((depot_s, route[0]), MAX_COST)\n",
         "\n",
-        "            # 2. Costo tra i clienti nella rotta.\n",
+        "            # Si aggiungono i costi tra i clienti nella rotta\n",
         "            for i in range(len(route) - 1):\n",
         "                # Aggiunge il costo dell'arco tra il cliente i e il cliente i+1\n",
         "                total_cost += c.get((route[i], route[i+1]), MAX_COST)\n",
         "\n",
-        "            # 3. Costo dell'ultimo cliente -> deposito in arrivo 't'.\n",
+        "            # Si aggiunge il costo dell'arco dall'ultimo cliente al deposito in arrivo 't'\n",
         "            total_cost += c.get((route[-1], depot_t), MAX_COST)\n",
         "    return total_cost\n",
         "\n",
+        "\n",
+        "# Verifica che siano rispettati i vincoli di capacità e finestra temporale\n",
         "def is_feasible(solution, d, Q, t, s, a, b):\n",
-        "    \"\"\"Verifica i vincoli di capacità e finestra temporale per l'intera soluzione.\"\"\"\n",
         "    # Nota: la soluzione è un dizionario {veicolo_id: rotta}\n",
         "    for veicolo_id, route in solution.items():\n",
         "        # Chiama la funzione di verifica capacità per la rotta specifica\n",
         "        if not verifica_capacità(route, d, Q[veicolo_id]):\n",
-        "            return False # Se una rotta non è ammissibile per capacità, fallisce.\n",
+        "            return False # Se una rotta non è ammissibile per capacità, fallisc\n",
         "        # Chiama la funzione di verifica finestra temporale per la rotta specifica\n",
         "        if not verifica_finestra(route, t, s, a, b, veicolo_id):\n",
-        "            return False # Se una rotta non è ammissibile per finestra temporale, fallisce.\n",
-        "    return True # L'intera soluzione è ammissibile.\n",
+        "            return False # Se una rotta non è ammissibile per finestra temporale, fallisce\n",
+        "    return True # L'intera soluzione è ammissibile\n",
         "\n",
+        "\n",
+        "# Genera una soluzione iniziale ammissibile, tramite strategia Greedy di inserimento\n",
         "def initialize_solution(P, V, Q, d, t, s, a, b, c, depot_s, depot_t):\n",
-        "    \"\"\"Genera una soluzione iniziale ammissibile (Strategia Greedy di Inserimento).\"\"\"\n",
         "    remaining_clients = list(P)\n",
         "    # Ordina i clienti in base all'orario di chiusura (Euristica per rispettare i Time Window)\n",
         "    remaining_clients.sort(key=lambda c_id: b[c_id])\n",
@@ -234,8 +238,9 @@
         "    # Restituisce la soluzione iniziale trovata e il suo costo\n",
         "    return initial_solution, initial_cost\n",
         "\n",
+        "\n",
+        "# Genera vicini tramite mosse di SWAP ammissibili, sia inter-rotta che intra-rotta\n",
         "def find_neighborhood(current_solution, TABU, d, Q, t, s, a, b):\n",
-        "    \"\"\"Genera vicini tramite mosse di SWAP (inter- e intra-rotta) ammissibili.\"\"\"\n",
         "    neighborhood = [] # Lista per le soluzioni vicine ammissibili\n",
         "    moves = []        # Lista per le mosse corrispondenti\n",
         "    current = current_solution\n",
@@ -252,7 +257,7 @@
         "                node2 = route1[idx2]\n",
         "                move = (node1, node2); inverse_move = (node2, node1)\n",
         "\n",
-        "                # Controllo Tabu: Ignora le mosse proibite.\n",
+        "                # Controllo Tabu: Ignora le mosse proibite\n",
         "                if move not in TABU and inverse_move not in TABU:\n",
         "                    new_solution = deepcopy(current)\n",
         "                    new_route1 = new_solution[v1_id]\n",
@@ -272,7 +277,7 @@
         "                        node2 = route2[idx2]\n",
         "                        move = (node1, node2); inverse_move = (node2, node1)\n",
         "\n",
-        "                        # Controllo Tabu: Ignora le mosse proibite.\n",
+        "                        # Controllo Tabu: Ignora le mosse proibite\n",
         "                        if move not in TABU and inverse_move not in TABU:\n",
         "                            new_solution = deepcopy(current)\n",
         "                            new_route1 = new_solution[v1_id]\n",
@@ -281,15 +286,16 @@
         "                            # Esegue lo swap inter-rotta\n",
         "                            new_route1[idx1], new_route2[idx2] = new_route2[idx2], new_route1[idx1]\n",
         "\n",
-        "                            # Verifica l'ammissibilità di entrambe le rotte modificate.\n",
+        "                            # Verifica l'ammissibilità di entrambe le rotte modificate\n",
         "                            if is_feasible({v1_id: new_route1, v2_id: new_route2}, d, Q, t, s, a, b):\n",
         "                                neighborhood.append(new_solution)\n",
         "                                moves.append(move)\n",
         "\n",
         "    return neighborhood, moves\n",
         "\n",
+        "\n",
+        "# Aggiorna la lista Tabu con la nuova mossa e decrementa il tenure delle mosse esistenti\n",
         "def update_tabu_list(TABU, best_move, tabu_size):\n",
-        "    \"\"\"Aggiorna la lista Tabu con la nuova mossa e decrementa il tenure delle mosse esistenti.\"\"\"\n",
         "    if best_move is not None:\n",
         "        node1, node2 = best_move\n",
         "        inverse_move = (node2, node1)\n",
@@ -322,17 +328,6 @@
         "# --- FUNZIONE PRINCIPALE DI RICERCA ---\n",
         "\n",
         "def tabu_search(P, c, t, d, a, b, V, Q, s, n_iters=1000, tabu_size=50):\n",
-        "    \"\"\"Logica principale della Ricerca Tabu.\n",
-        "\n",
-        "    Args:\n",
-        "        P (list): Lista dei nodi cliente.\n",
-        "        c, t, d, a, b, V, Q, s (dict/list): Parametri del problema VRPTW (costi, tempi, domande, finestre, veicoli, capacità, servizi).\n",
-        "        n_iters (int): Numero massimo di iterazioni (criterio di stop).\n",
-        "        tabu_size (int): Il 'tenure' o durata di proibizione per le mosse nella lista Tabu.\n",
-        "\n",
-        "    Returns:\n",
-        "        tuple: La migliore soluzione trovata e il suo costo.\n",
-        "    \"\"\"\n",
         "\n",
         "    # Parametri del Deposito\n",
         "    depot_s = 0 \t \t # Deposito in partenza 's' (indice 0)\n",
