--- a/AOCR_Algoritmo_euristico.ipynb
+++ b/AOCR_Algoritmo_euristico.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "13321604",
    "metadata": {},
    "outputs": [],
@@ -653,19 +653,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "0b10b7f8",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{1: [[4, 5]], 2: [[7, 8, 10]], 3: [[2, 3]], 4: [[1, 9, 6]]}"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: [[4, 5]], 2: [[7, 8, 10]], 3: [[2, 3]], 4: [[1, 9, 6]]}\n"
+     ]
     }
    ],
    "source": [
@@ -732,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "1145cc88",
    "metadata": {},
    "outputs": [
@@ -743,21 +740,21 @@
       "Rotta: [4, 5]\n",
       "Veicolo 1: 0, 4 (costo: 9)\n",
       "Veicolo 1: 4, 5 (costo: 11)\n",
-      "Veicolo 1: 5,11 (costo: 7)\n",
+      "Veicolo 1: 5, 11 (costo: 7)\n",
       "Rotta: [7, 8, 10]\n",
       "Veicolo 2: 0, 7 (costo: 11)\n",
       "Veicolo 2: 7, 8 (costo: 9)\n",
       "Veicolo 2: 8, 10 (costo: 5)\n",
-      "Veicolo 2: 10,11 (costo: 2)\n",
+      "Veicolo 2: 10, 11 (costo: 2)\n",
       "Rotta: [2, 3]\n",
       "Veicolo 3: 0, 2 (costo: 5)\n",
       "Veicolo 3: 2, 3 (costo: 8)\n",
-      "Veicolo 3: 3,11 (costo: 13)\n",
+      "Veicolo 3: 3, 11 (costo: 13)\n",
       "Rotta: [1, 9, 6]\n",
       "Veicolo 4: 0, 1 (costo: 5)\n",
       "Veicolo 4: 1, 9 (costo: 2)\n",
       "Veicolo 4: 9, 6 (costo: 13)\n",
-      "Veicolo 4: 6,11 (costo: 4)\n",
+      "Veicolo 4: 6, 11 (costo: 4)\n",
       "Costo totale: 104\n"
      ]
     }
